trained AI model

--- a/ai.html
+++ b/ai.html
@@ -6,7 +6,7 @@
     <title>Finne ut initial triggers</title>
     <style>
         body {
-            background-color: rgb(226, 219, 194);
+            background-color: rgb(226, 194, 226);
         }
         #video-container {
             position: relative;
@@ -85,7 +85,7 @@
   
   // Video
   let video;
-  let flippedVideo;
+
   // To store the classification
   let label = "";
 
@@ -101,7 +101,7 @@
     video.size(640, 480);
     video.hide();
 
-    flippedVideo = ml5.flipImage(video);
+
     // Start classifying
     classifyVideo();
   }
@@ -109,7 +109,7 @@
   function draw() {
     background(0);
     // Draw the video
-    image(flippedVideo, 0, 0);
+    image(video, 0, 0);
 
     // Draw the label
     fill(255);
@@ -120,9 +120,9 @@
 
   // Get a prediction for the current video frame
   function classifyVideo() {
-    flippedVideo = ml5.flipImage(video)
-    classifier.classify(flippedVideo, gotResult);
-    flippedVideo.remove();
+
+    classifier.classify(video, gotResult);
+    video.remove();
 
   }
 
