trained AI model

--- a/ai.html
+++ b/ai.html
@@ -6,7 +6,7 @@
     <title>Finne ut initial triggers</title>
     <style>
         body {
-            background-color: rgb(190, 50, 29);
+            background-color: rgb(190, 166, 29);
         }
         #video-container {
             position: relative;
@@ -95,7 +95,7 @@
   }
 
   function setup() {
-    //createCanvas(640, 480);
+    createCanvas(230, 240);
     // Create the video
     video = createCapture(VIDEO);
     video.size(640, 480);
