--- a/ai.html
+++ b/ai.html
@@ -6,14 +6,19 @@
     <title>Finne ut initial triggers</title>
     <style>
         body {
-            background-color: rgba(141, 169, 243, 0.829);
+            background-color: rgba(226, 141, 243, 0.829);
+        }
+
+        p {
+             font-family: verdana;
+            font-size: 20px;
         }
         #video-container {
             position: relative;
             top: 0;
             left: 50px;
             width: 1000px;
-            height: 700px;
+            height: 500px;
         }
         #controls {
             position: static;
@@ -32,7 +37,7 @@
         }
         #label {
             font-size: 32px;
-            color:rgba(248, 248, 248, 0.829);
+            color:rgba(0, 0, 0, 0.829);
         }
         .pixel {
             width: 32px;
@@ -70,11 +75,12 @@
     </div>
 
     <div id="controls">
+        <p id="label"></p>
         <button id="playPause">Play / Pause</button>
         <button id="clear">Clear</button>
         <button id="glider">Draw glider</button>
         <button id="glider2">Draw glider 2</button>
-        <p id="label"></p>
+        
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.26/Tone.js"></script>
