trained AI model

--- a/ai.html
+++ b/ai.html
@@ -6,7 +6,7 @@
     <title>Finne ut initial triggers</title>
     <style>
         body {
-            background-color: rgba(226, 141, 243, 0.829);
+            background-color: rgba(243, 156, 141, 0.829);
         }
 
         p {
@@ -36,6 +36,8 @@
             height: 480px;
         }
         #label {
+            position: absolute;
+            top: 0;
             font-size: 32px;
             color:rgba(0, 0, 0, 0.829);
         }
