trained AI model

--- a/ai.html
+++ b/ai.html
@@ -6,7 +6,7 @@
     <title>Finne ut initial triggers</title>
     <style>
         body {
-            background-color: rgba(243, 141, 141, 0.829);
+            background-color: rgba(141, 165, 243, 0.829);
         }
 
         p {
@@ -36,8 +36,10 @@
             height: 480px;
         }
         #label {
+            position: absolute;
+            top: 0;
             font-size: 32px;
-            color:rgba(0, 0, 0, 0.829);
+            color:rgba(255, 255, 255, 0.829);
         }
         .pixel {
             width: 32px;
