--- a/ai.html
+++ b/ai.html
@@ -6,7 +6,7 @@
     <title>Finne ut initial triggers</title>
     <style>
         body {
-            background-color: rgba(141, 165, 243, 0.829);
+            background-color: rgba(23, 51, 143, 0.829);
         }
 
         p {
@@ -38,6 +38,7 @@
         #label {
             position: absolute;
             top: 0;
+            left: 50px;
             font-size: 32px;
             color:rgba(255, 255, 255, 0.829);
         }
