--- a/ai.html
+++ b/ai.html
@@ -6,7 +6,7 @@
     <title>Finne ut initial triggers</title>
     <style>
         body {
-            background-color: rgba(23, 51, 143, 0.829);
+            background-color: rgba(2, 9, 34, 0.829);
         }
 
         p {
@@ -38,7 +38,7 @@
         #label {
             position: absolute;
             top: 0;
-            left: 50px;
+            left: 100px;
             font-size: 32px;
             color:rgba(255, 255, 255, 0.829);
         }
@@ -57,6 +57,7 @@
             display: grid;
             grid-template-columns: repeat(20, 32px);
             grid-template-rows: repeat(15, 32px);
+            border-radius: 50px;
         }
         .cell {
             width: 32px;
