--- a/ai.html
+++ b/ai.html
@@ -222,7 +222,7 @@
 
         document.addEventListener('keydown', (event) => {
             if (event.key.toLowerCase() === 'd') {
-                drone.triggerAttack(currentNote, "+0.5", 0.5);
+                drone.triggerAttack(currentNote, now);
             }
         });
 
