--- a/ai.html
+++ b/ai.html
@@ -6,7 +6,7 @@
     <title>Finne ut initial triggers</title>
     <style>
         body {
-            background-color: rgba(2, 9, 34, 0.829);
+            background-color: rgba(86, 116, 223, 0.829);
         }
 
         p {
@@ -183,6 +183,37 @@
 
         let currentScale = pentatonicScale;
 
+        // Tone.js parameters:
+        const gainNode = new Tone.Gain().toDestination();
+        const pingPong = new Tone.PingPongDelay().connect(gainNode);
+        const phaser = new Tone.Phaser().connect(gainNode);
+        const autoWah = new Tone.AutoWah(50, 6, -30).connect(gainNode);
+
+
+        const synth2 = new Tone.MonoSynth({
+            oscillator: {
+                type: "square"
+            },
+            envelope: {
+                attack: 0.5,
+                decay: 0.2,
+                sustain: 1.0,
+                release: 0.8
+            }
+        }).connect(gainNode);
+        const synth3 = new Tone.MonoSynth({
+            oscillator: {
+                type: "sine"
+            },
+            envelope: {
+                attack: 0.5,
+                decay: 0.2,
+                sustain: 1.0,
+                release: 0.8
+            }
+        }).connect(gainNode);
+
+
         const gridContainer = document.getElementById('grid');
         for (let i = 0; i < rows; i++) {
             for (let j = 0; j < cols; j++) {
@@ -222,7 +253,7 @@
 
         document.addEventListener('keydown', (event) => {
             if (event.key.toLowerCase() === 'd') {
-                drone.triggerAttack(currentNote, now);
+                drone.triggerAttack(currentNote);
             }
         });
 
