--- a/ai.html
+++ b/ai.html
@@ -6,7 +6,7 @@
     <title>Finne ut initial triggers</title>
     <style>
         body {
-            background-color: rgba(172, 152, 111, 0.829);
+            background-color: rgba(132, 111, 172, 0.829);
         }
 
         p {
@@ -186,8 +186,8 @@
         // Tone.js parameters:
         const gainNode = new Tone.Gain().toDestination();
         const pingPong = new Tone.PingPongDelay().connect(gainNode);
-        //const phaser = new Tone.Phaser().connect(gainNode);
-        const phaser = new Tone.AutoWah(50, 6, -30).connect(gainNode);
+        const phaser = new Tone.Phaser().connect(gainNode);
+        const autoWah = new Tone.AutoWah(50, 6, -30).connect(gainNode);
 
         gainNode.gain.value = 0.2;
 
