--- a/ai.html
+++ b/ai.html
@@ -6,7 +6,7 @@
     <title>Finne ut initial triggers</title>
     <style>
         body {
-            background-color: rgba(172, 120, 111, 0.829);
+            background-color: rgba(172, 171, 111, 0.829);
         }
 
         p {
@@ -434,18 +434,6 @@
     classifyVideo();
   }
 
-  //function draw() {
- //   background(0);
-    // Draw the video
-   // image(video, 0, 0);
-
-    // Draw the label
- //   fill(255);
- //   textSize(16);
- //   textAlign(CENTER);
- //   text(label, width / 2, height - 4);
- // }
-
   // Get a prediction for the current video frame
   function classifyVideo() {
 
@@ -463,8 +451,16 @@
     }
     // The results are in an array ordered by confidence.
     // console.log(results[0]);
+    let previousLabel = label;
+
     label = results[0].label;
+
+    if (previousLabel !== label) {
+        console.log("play Sound");
+    }
     console.log(label);
+
+    
     document.getElementById("label").innerHTML = label;
 
     // Classifiy again!
