--- a/ai2.html
+++ b/ai2.html
@@ -6,14 +6,19 @@
     <title>Finne ut initial triggers</title>
     <style>
         body {
-            background-color: rgb(160, 151, 121);
+            background-color: rgba(255, 0, 0, 0.829);
+        }
+
+        p {
+             font-family: verdana;
+            font-size: 20px;
         }
         #video-container {
             position: relative;
             top: 0;
             left: 50px;
             width: 1000px;
-            height: 700px;
+            height: 500px;
         }
         #controls {
             position: static;
@@ -30,6 +35,13 @@
             width: 640px;
             height: 480px;
         }
+        #label {
+            position: absolute;
+            top: 0;
+            left: 100px;
+            font-size: 32px;
+            color:rgba(255, 255, 255, 0.829);
+        }
         .pixel {
             width: 32px;
             height: 32px;
@@ -41,10 +53,11 @@
             top: 0;
             left: 50px;
             width: 640px;
-            height: 640px;
+            height: 480px;
             display: grid;
             grid-template-columns: repeat(20, 32px);
             grid-template-rows: repeat(15, 32px);
+            border-radius: 50px;
         }
         .cell {
             width: 32px;
@@ -66,13 +79,19 @@
     </div>
 
     <div id="controls">
+        <p id="label"></p>
         <button id="playPause">Play / Pause</button>
         <button id="clear">Clear</button>
         <button id="glider">Draw glider</button>
         <button id="glider2">Draw glider 2</button>
+        
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.26/Tone.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/p5@latest/lib/p5.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/p5@latest/lib/addons/p5.dom.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/ml5@latest/dist/ml5.min.js"></script>
+
     <script>
         const pixelSize = 32;
         const threshold = 155;
@@ -156,13 +175,53 @@
         let pentatonicScale = ['A2', 'C3', 'D3', 'E3', 'G3', 'A3', 'C4', 'D4', 'E4', 'G4', 'A4', 'C5', 'D5', 'E5', 'G5'];
         let pentatonicScale2 = ['A#2', 'C#3', 'D#3', 'F3', 'G#3', 'A#3', 'C#4', 'D#4', 'F4', 'G#4', 'A#4', 'C#5', 'D#5', 'F5', 'G#5'];
         let pentatonicScale3 = ['B2', 'D3', 'E3', 'F#3', 'A3', 'B3', 'D4', 'E4', 'F#4', 'A4', 'B4', 'D5', 'E5', 'F#5', 'A5'];
+        let pentatonicScale4 = ['C2', 'D#3', 'F3', 'G3', 'A#3', 'C3', 'D#4', 'F4', 'G4', 'A#4', 'C4', 'D#5', 'F5', 'G5', 'A#5'];
         let drone = new Tone.Synth().toDestination();
         let droneNote = 'A2';
         let droneNote2 = 'A#2';
-        let droneNote3 = 'B3';
+        let droneNote3 = 'B2';
+        let droneNote4 = 'C2';
         let currentNote = droneNote;
 
         let currentScale = pentatonicScale;
+
+        // Tone.js parameters:
+        const gainNode = new Tone.Gain().toDestination();
+        const pingPong = new Tone.PingPongDelay().connect(gainNode);
+        const phaser = new Tone.Phaser().connect(gainNode);
+        const autoWah = new Tone.AutoWah(50, 6, -30).connect(gainNode);
+        const vibrato = new Tone.Vibrato().connect(gainNode);
+        const freeverb = new Tone.Freeverb().connect(gainNode);
+
+
+        gainNode.gain.value = 0.2;
+
+
+        const synth2 = new Tone.MonoSynth({
+            oscillator: {
+                type: "square"
+            },
+            envelope: {
+                attack: 0.5,
+                decay: 0.2,
+                sustain: 1.0,
+                release: 0.8
+            }
+        }).connect(phaser);
+
+
+        const synth3 = new Tone.MonoSynth({
+            oscillator: {
+                type: "sine"
+            },
+            envelope: {
+                attack: 0.5,
+                decay: 0.2,
+                sustain: 1.0,
+                release: 0.8
+            }
+        }).connect(freeverb);
+
 
         const gridContainer = document.getElementById('grid');
         for (let i = 0; i < rows; i++) {
@@ -203,7 +262,7 @@
 
         document.addEventListener('keydown', (event) => {
             if (event.key.toLowerCase() === 'd') {
-                drone.triggerAttack(currentNote, "+0.5", 0.5);
+                synth2.triggerAttack(currentNote);
             }
         });
 
@@ -314,17 +373,30 @@
 
             grid = newGrid;
 
-            if (activeCellCount > 15) {
+            phaser.frequency.value = activeCellCount;
+
+            if ((activeCellCount > 10) && (activeCellCount < 20)) {
                 currentScale = pentatonicScale2;
                 currentNote = droneNote2;
             } 
-            if (activeCellCount > 30) {
+            if ((activeCellCount > 20) && (activeCellCount < 30)) {
                 currentScale = pentatonicScale3;
                 currentNote = droneNote3;
-            } else {
+            } 
+
+            if ((activeCellCount > 30) && (activeCellCount < 50)) {
+                currentScale = pentatonicScale4;
+                currentNote = droneNote4;
+            } 
+            if (activeCellCount < 1) {
+                synth2.triggerRelease(0.5);
+            } 
+            else {
                 currentScale = pentatonicScale;
                 currentNote = droneNote;
             }
+
+            synth2.frequency.value = currentNote;
         }
 
         function playNote(i, j) {
@@ -346,14 +418,9 @@
             synth.cellY = j;
             activeSynths.push(synth);
         }
-    </script>
 
-<div>Teachable Machine Image Model - p5.js and ml5.js</div>
-<script src="https://cdn.jsdelivr.net/npm/p5@latest/lib/p5.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/p5@latest/lib/addons/p5.dom.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/ml5@latest/dist/ml5.min.js"></script>
-<script type="text/javascript">
-  // Classifier Variable
+
+          // Classifier Variable
   let classifier;
   // Model URL
   let imageModelURL = 'https://teachablemachine.withgoogle.com/models/UsGnRu7Ed/';
@@ -370,27 +437,15 @@
   }
 
   function setup() {
-    createCanvas(320, 260);
+    createCanvas(320, 320); // canvvas 320 * 320 for å få bra proposjoner på hovedvinduet
     // Create the video
     video = createCapture(VIDEO);
-    video.size(320, 240);
+    video.size(640, 480);
     video.hide();
 
 
     // Start classifying
     classifyVideo();
-  }
-
-  function draw() {
-    background(0);
-    // Draw the video
-    image(video, 0, 0);
-
-    // Draw the label
-    fill(255);
-    textSize(16);
-    textAlign(CENTER);
-    text(label, width / 2, height - 4);
   }
 
   // Get a prediction for the current video frame
@@ -410,11 +465,29 @@
     }
     // The results are in an array ordered by confidence.
     // console.log(results[0]);
+    let previousLabel = label;
+
     label = results[0].label;
+
+    if (previousLabel !== label) {
+        console.log("play Sound");
+        drawGlider();
+       // synth3.triggerAttackRelease("C3", "4n" );
+    }
+    console.log(label);
+
+    
+    document.getElementById("label").innerHTML = label;
+
     // Classifiy again!
     classifyVideo();
   }
-</script>
+
+    </script>
+
+
+
+
 
 </body>
 </html>
