trained AI model

--- a/matrix.html
+++ b/matrix.html
@@ -6,7 +6,7 @@
     <title>Dele opp griden i fire ruter og dele opp etter tonalitet. Mengde = Gain</title>
     <style>
         body {
-            background-color: rgba(17, 0, 255, 0.829);
+            background-color: rgba(43, 255, 0, 0.829);
         }
 
         p {
@@ -375,7 +375,7 @@
 
             phaser.frequency.value = activeCellCount;
             // i stedet for tonalitet er basert på activeCellCount, skal gain være det. skala er i stedet bestemt av fire forskjellige områder i en matrise.
-console.log("gain: ", activeCellCount);
+            console.log("gain: ", (activeCellCount / 100));
 
             if ((activeCellCount > 10) && (activeCellCount < 20)) {
                 currentScale = pentatonicScale2;
@@ -473,7 +473,7 @@ console.log("gain: ", activeCellCount);
         drawGlider();
        // synth3.triggerAttackRelease("C3", "4n" );
     }
-    console.log(label);
+   // console.log(label);
 
     
     document.getElementById("label").innerHTML = label;
