--- a/matrix.html
+++ b/matrix.html
@@ -375,7 +375,7 @@
 
             phaser.frequency.value = activeCellCount;
             // i stedet for tonalitet er basert på activeCellCount, skal gain være det. skala er i stedet bestemt av fire forskjellige områder i en matrise.
-            console.log("gain: ", ((activeCellCount / 100) * -1));
+            console.log("gain: ", (((activeCellCount / 100) * -1)) + 1);
 
             if ((activeCellCount > 10) && (activeCellCount < 20)) {
                 currentScale = pentatonicScale2;
@@ -469,7 +469,7 @@
     label = results[0].label;
 
     if (previousLabel !== label) {
-        console.log("play Sound");
+        //console.log("play Sound");
         drawGlider();
        // synth3.triggerAttackRelease("C3", "4n" );
     }
