trained AI model

--- a/matrix.html
+++ b/matrix.html
@@ -6,7 +6,7 @@
     <title>Dele opp griden i fire ruter og dele opp etter tonalitet. Mengde = Gain</title>
     <style>
         body {
-            background-color: rgba(255, 17, 0, 0.829);
+            background-color: rgba(255, 196, 0, 0.829);
         }
 
         p {
@@ -194,7 +194,7 @@
         const freeverb = new Tone.Freeverb().connect(gainNode);
 
 
-        gainNode.gain.value = 0.2;
+       // gainNode.gain.value = 0.2;
 
 
         const synth2 = new Tone.MonoSynth({
@@ -377,6 +377,13 @@
             // i stedet for tonalitet er basert på activeCellCount, skal gain være det. skala er i stedet bestemt av fire forskjellige områder i en matrise.
             console.log("gain to: ", (((activeCellCount / 100) * -1)) + 0.8);
             console.log("faktisk gain nå: ", gainNode.gain.value);
+            let nyGain;
+            
+            nyGain = ((((activeCellCount / 100) * -1)) + 0.8);
+
+            gainNode.gain.value = nyGain;
+
+
 
             if ((activeCellCount > 10) && (activeCellCount < 20)) {
                 currentScale = pentatonicScale2;
@@ -411,7 +418,7 @@
             const note = currentScale[noteIndex];
             const gain = ((j / cols) / 2);
 
-            synth.triggerAttackRelease(note, '16n', undefined, gain);
+            synth.triggerAttackRelease(note, '16n', undefined, nyGain);
             
 
             synth.cellX = i;
