trained AI model

--- a/matrix.html
+++ b/matrix.html
@@ -383,8 +383,9 @@
            
 
             
-            nyGain = ((((activeCellCount / 100) * -1)) + 0.8);
+            nyGain = ((((activeCellCount / 100) * -1)) + 0.5);
             gainNode.gain.value = nyGain;
+            console.log("faktisk gain nå: ", gainNode.gain.value);
 
 
 
