trained AI model

--- a/matrix.html
+++ b/matrix.html
@@ -432,7 +432,7 @@
             synth.cellY = j;
             console.log("i: ", i);
             console.log("j: ", j);
-            console.log("cols: ", cols);
+            //console.log("cols: ", cols);
 
 
             activeSynths.push(synth);
