trained AI model

--- a/matrix.html
+++ b/matrix.html
@@ -364,7 +364,7 @@
 // ++ etter en variabel betyr +1. 
                     console.log("i er: ", i);
                     console.log("j er: ", j);
-                    console.log("newGrid[i][j] er: ", i);
+                    console.log("newGrid[i][j] er: ", newGrid[i][j]);
 
                     if (newGrid[i][j] === 1) {
                         activeCellCount++;
