trained AI model

--- a/matrix.html
+++ b/matrix.html
@@ -372,10 +372,10 @@
                         
                     }
                     for (let i = 0; i < 7; i++) {
-                    for (let j = 0; j < 9; j++) {
-                    if (newGrid[i][j] === 1) {
+                        for (let j = 0; j < 9; j++) {
+                        if (newGrid[i][j] === 1) {
                         activeCellA0++;
-                        console.log("activeCellA0 ", activeCellA0);
+                        //console.log("activeCellA0 ", activeCellA0);
                         //inni her teller den hele tiden opp til antallet det er    
                     }  
                 }
@@ -413,6 +413,7 @@
 
             //her viser det faktisk antall cells count og ikke teller fra 1-4
             //console.log("activeCellCount: ", activeCellCount);
+            console.log("activeCellA0 ", activeCellA0);
 
             // skala basert på antall aktive celler
 
